# cpp-big-systems

hw-1-constexpr/sem-2-constexpr/: a.out  sem-2-constexpr-class.cpp
hw-2-pretty-print/: pretty_printer.cpp
hw-3-allocate-shared/: main.cpp
hw-4-CRTP/: tree.cpp  tree.h
hw-5-generator-projecting/: CMakeLists.txt
hw-5-generator-projecting/src/: Generator_fabric.cpp  Generator_fabric.h
hw-5-generator-projecting/src/Creators/: Generator_creator.h
hw-5-generator-projecting/src/Generators/: Random_generators.cpp  Random_generators.h
hw-5-generator-projecting/src/Test/: main.cpp
hw-6-any-class/: any.cpp
sem-2/: sem-2-constexpr-class.cpp
sem-2-constexpr/: sem-2-constexpr-func.cpp
sem-2/sem-2-constexpr/: main
sem-4/: pretty_printer.cpp
